# Selected-topics-within-programming

./: .gitignore
Concurrency/include/: mtqueue.hpp
Concurrency/src/: futures.cpp  mtqueue.cpp
Session1/: CMakeLists.txt  main.cpp
Session2/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  bench_random.cpp  bench_random.h  benchmark_result.h  endian_test.cpp  endian_test.h  lecture2.cpp  lecture2.h  main.cpp  timer.cpp  timer.h  types_and_sizes.cpp  types_and_sizes.h
Session3/polygon/: CMakeLists.txt  polygon.cpp  polygon.hpp  test_polygon.cpp
Session4/: CMakeLists.txt  Point.cpp  Point.h  Polyline.cpp  Polyline.h  main.cpp
StaticVisitor/: README.md
StaticVisitor/include/: json_input.hpp  json_output.hpp  meta.hpp
StaticVisitor/src/: CMakeLists.txt  json_input_test.cpp  json_output_test.cpp  meta_test.cpp  sum.cpp
calculator/: CMakeLists.txt  calculator.hpp  test_calculator.cpp
calculator/terms/: assign_t.cpp  assign_t.h  binary_t.cpp  binary_t.h  const_t.cpp  const_t.h  op_t.h  term_t.h  term_visitor.h  unary_t.cpp  unary_t.h  var_t.cpp  var_t.h  visitor.h
calculator/terms/visitors/: visitors.cpp  visitors.h
exam/: CMakeLists.txt  README.md  doctest.cmake
exam/include/: ReactionNetwork.cpp  ReactionNetwork.h  doctest.h  simulation.cpp  simulation.h
exam/include/benchmark/: benchmark.cpp  benchmark.h  benchmarkResult.cpp  benchmarkResult.h  benchmark_result.cpp  benchmark_result.h  timer.cpp  timer.h
exam/include/factories/: csvFactory.h  graphvizFactory.h  networkFactory.h  reactionNetworkFactory.h
exam/include/meta/: agentConstraint.h  monitorConstraint.h
exam/include/parallelRunner/: parallelRunner.h
exam/include/reaction/: agentOperations.h  agents.cpp  agents.h  constructionRules.h  construction_rules.h  reaction.cpp  reaction.h  rule.cpp  rule.h
exam/include/reactionNetwork/: ReactionNetwork.h  reactionNetwork.cpp  reactionNetwork.h  reactionNetworkSimulator.cpp  reactionNetworkSimulator.h
exam/include/reactionNetwork/monitor/: monitor.cpp  monitor.h
exam/include/reaction_network/: ReactionNetwork.cpp  ReactionNetwork.h  ReactionNetworkRunner.cpp  ReactionNetworkRunner.h  ReactionNetworkSimulator.cpp  ReactionNetworkSimulator.h  reactionNetwork.cpp  reactionNetwork.h  reactionNetworkSimulator.cpp  reactionNetworkSimulator.h
exam/include/reaction_network/monitor/: monitor.cpp  monitor.h
exam/include/reaction_network/monitors/: SimulationMonitors.cpp  SimulationMonitors.h
exam/include/symbolTable/: symbolTable.h
exam/include/symbol_table/: reaction_table.h  symbolTable.h  symbol_table.h
exam/src/: CMakeLists.txt  benchmark.cpp  benchmark_singlethreaded.cpp  benchmarks.cpp  circadian.cpp  covid.cpp  figure1.cpp  figure2.cpp  figure3.cpp  graphicsAndCsv.cpp  main.cpp  maxCovid.cpp  max_covid.cpp  meanPeak.cpp  simple.cpp  simulation.cpp  symbolTableTest.cpp  symbolTable_test.cpp
exam/src/reaction/: Reaction.h  agents.h  reaction.cpp  reaction.h  rule.cpp
extended1-template/: CMakeLists.txt  client.cpp  client.h  listing.tex  main.cpp  number_series.cpp  number_series.h  number_series_wrap.cpp  test_number_series.cpp
numberSeries/: CMakeLists.txt  Client.cpp  Client.h  NumberSeries.cpp  NumberSeries.h  main.cpp
pythonc/: README.md
pythonc/src/: CMakeLists.txt  plot_test.cpp  rk4multi.cpp  test_qt5.cpp  test_rk4.c  test_rk4.cpp
pythonc/src/plot/: Line.cpp  Line.h  NamedLineSetUp.hpp  WithName.cpp  plot.cpp  plot.hpp  plot_interface.h  plottable.hpp  setup_interface.hpp
session10/: CMakeLists.txt
session10/src/: CMakeLists.txt  lambda-puzzle1.cpp  lambda-puzzle2.cpp  lambda-puzzle3.cpp
session5/: CMakeLists.txt  main.cpp
session5/benchmark/: Benchmark.cpp  Benchmark.h  benchmark_result.cpp  benchmark_result.h
session5/polymorphic_test/: base.cpp  base.h  derived.cpp  derived.h
session7/: CMakeLists.txt  main.cpp
session8/: CMakeLists.txt  main.cpp
wordle/: CMakeLists.txt  filter.cpp  filter.h  main.cpp  parse_js.cpp  parse_js.h  word_reader.cpp  word_reader.h  word_search.cpp  word_search.h  wordles.js
